     be used to switch the algorithms at run time.
  * A new option when starting a remote asterisk (rasterisk, asterisk -r) for
     specifying which socket to use to connect to the running Asterisk daemon
     (-s)
  * Performance enhancements to the sched facility, which is used in
    the channel drivers, etc. Added hashtabs and doubly-linked lists
    to speed up deletion; start at the beginning or end of list to
    speed up insertion.
  * Added Doubly-linked lists after the fashion of linkedlists.h. They are in
    dlinkedlists.h. Doubly-linked lists feature fast deletion times.
    Added regression tests to the tests/ dir, also.
  * Added a refcount trace feature to astobj2 for those trying to balance
    object creation, deletion; work, play; space and time. See the
    notes in astobj2.h. Also, see utils/refcounter as well, as a
    quick way to find unbalanced refcounts in what could be a sea
    of objects that were balanced.
  * Added logging to 'make update' command.  See update.log
  * Added strictrtp option to rtp.conf. If enabled this will drop RTP packets that
     do not come from the remote party.
  * Added the 'n' option to the SpeechBackground application to tell it to not
     answer the channel if it has not already been answered.
  * Added a compiler flag, CHANNEL_TRACE, which permits channel tracing to be
     turned on, via the CHANNEL(trace) dialplan function.  Could be useful for
     dialplan debugging.
  * iLBC source code no longer included (see UPGRADE.txt for details)
  * If compiled with DETECT_DEADLOCKS enabled and if you have glibc, then if 
     deadlock is detected, a backtrace of the stack which led to the lock calls
     will be output to the CLI.
  * If compiled with DEBUG_THREADS enabled and if you have glibc, then issuing
     the "core show locks" CLI command will give lock information output as well
     as a backtrace of the stack which led to the lock calls.